# simplydigitals-aiarbitrageur

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  simplydigitals-aiarbitrageur.code-workspace
.claude/: settings.json
.claude/hooks/: pre-commit-checks.sh
.github/workflows/: backend-ci.yml  docker-build.yml  frontend-ci.yml
simplydigitals-aiarbitrageur-api/: .coverage  .dockerignore  .env.example  Dockerfile  Dockerfile.server  alembic.ini  arbitrageur_dev.db  coverage.xml  dev.db  docker-compose.yml  pyproject.toml
simplydigitals-aiarbitrageur-api/app/: main.py
simplydigitals-aiarbitrageur-api/app/modules/auth/: dependencies.py
simplydigitals-aiarbitrageur-api/app/modules/broker/: __init__.py  service.py
simplydigitals-aiarbitrageur-api/app/modules/portfolio/: models.py  router.py  schemas.py  service.py
simplydigitals-aiarbitrageur-api/app/modules/prices/: models.py  router.py  schemas.py  service.py
simplydigitals-aiarbitrageur-api/app/modules/status/: router.py
simplydigitals-aiarbitrageur-api/app/modules/tickers/: models.py  router.py  schemas.py  service.py
simplydigitals-aiarbitrageur-api/app/modules/triggers/: models.py  router.py  schemas.py  service.py
simplydigitals-aiarbitrageur-api/app/shared/: config.py  database.py  logging.py  scheduler.py  security.py
simplydigitals-aiarbitrageur-api/migrations/: env.py
simplydigitals-aiarbitrageur-api/migrations/versions/: 001_initial_schema.py  002_alpaca_integration.py  003_add_user_accounts.py  004_drop_trades_price_column.py  005_add_market_price_to_trades.py  006_add_filled_qty_to_trades.py
simplydigitals-aiarbitrageur-api/tests/unit/: conftest.py  test_auth.py  test_broker.py  test_endpoints.py  test_models.py  test_portfolio.py  test_pricing.py  test_scheduler.py  test_schemas.py  test_security.py  test_status.py  test_tickers.py  test_trade_with_limits.py  test_triggers.py  test_watchlist.py
simplydigitals-aiarbitrageur-ui/: .dockerignore  .eslintrc.json  Dockerfile  index.html  package-lock.json  package.json
(+8 files in other folders)
