[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "simplydigitals-aiarbitrageur-api"
version = "1.0.0"
requires-python = "==3.11.*"
dependencies = [
    # Web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "mangum>=0.17.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "psycopg2-binary>=2.9.9",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]==1.7.4",

    # Rate limiting
    "slowapi>=0.1.9",

    # Scheduler
    "apscheduler>=3.10.4",

    # Price data
    "yfinance>=0.2.40",
    "pandas>=2.2.2",

    # Alpaca Broker
    "alpaca-trade-api>=2.11.0",

    # HTTP client (async)
    "httpx>=0.27.0",

    # Observability
    "structlog>=24.1.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.8",
    "pip-audit>=2.7.3",
]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401", "B008", "F821", "ANN202"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]
"migrations/**" = ["ANN", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=html --cov-report=xml --cov-fail-under=50"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "migrations/*", "tests/*"]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]
